src/objects/ApexDocsConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Various pieces of config data for the Apex Docs application.</description>
    <fields>
        <fullName>Key__c</fullName>
        <description>The &quot;Key&quot; to the &quot;Key Value&quot; pair.</description>
        <inlineHelpText>The &quot;Key&quot; to the &quot;Key Value&quot; pair.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to specify the sorting order of the values for a type.</description>
        <inlineHelpText>This field is used to specify the sorting order of the values for a type.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>All of the ApexDocs application settings are grouped together by type.  The program code will group the values that it needs to form sub lists to work with.</description>
        <inlineHelpText>All of the ApexDocs application settings are grouped together by type.  The program code will group the values that it needs to form sub lists to work with.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The &quot;Value&quot; to the &quot;Key Value&quot; pair.</description>
        <inlineHelpText>The &quot;Value&quot; to the &quot;Key Value&quot; pair.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Apex Docs Config</label>
</CustomObject>